update web copyright, change documents url

--- a/web/views/public/layout.html
+++ b/web/views/public/layout.html
@@ -91,7 +91,7 @@
                     <span class="nav-label" langtag="scheme-file"></span></a>
                 </li>
                 <li class="{{if eq "help" .menu}}active{{end}}">
-                    <a href="{{.web_base_url}}/index/help"><i class="fa fa-lightbulb fa-lg"></i>
+                    <a href="https://ehang.io/nps/documents" target="_blank"><i class="fa fa-lightbulb fa-lg"></i>
                     <span class="nav-label" langtag="word-help"></span></a>
                 </li>
             </ul>
@@ -130,7 +130,7 @@
             <div class="float-right">
                 <span langtag="word-readmore"></span> <strong><a href="https://ehang.io/nps" langtag="word-go"></a></strong>
             </div>
-            <div><strong langtag="word-copyright"></strong> <span langtag="application"></span> &copy; 2018-2019</div>
+            <div><strong langtag="word-copyright"></strong> <span langtag="application"></span> &copy; 2018-2020</div>
         </div>
     </div>
 </div>
