--- a/web/views/index/hlist.html
+++ b/web/views/index/hlist.html
@@ -134,8 +134,9 @@
                 halign: 'center',
                 visible: true,//false表示不显示
                 formatter: function (value, row, index) {
+                    hosturl = ((row.Scheme == 'http' ) ? 'http://' : 'https://') + row.Host + row.Location
                     if (row.Client.IsConnect) {
-                        return '<span class="badge badge-primary" langtag="word-online"></span>'
+                        return '<a href="' + hosturl + '" target="_blank"><span class="badge badge-primary" langtag="word-online"></span></a>'
                     } else {
                         return '<span class="badge badge-badge" langtag="word-offline"></span>'
                     }
