--- a/web/views/login/index.html
+++ b/web/views/login/index.html
@@ -72,7 +72,7 @@
         </div>
     </div>
     <hr/>
-    <div class="footer">
+    <div class="footer" style="position: unset;">
         <div class="pull-right">
             <span langtag="word-readmore"></span> <strong><a href="https://ehang.io/nps" langtag="word-go"></a></strong>
         </div>
