--- a/web/views/login/index.html
+++ b/web/views/login/index.html
@@ -34,7 +34,7 @@
             </span>
         </nav>
     </div>
-<div class="loginColumns animated fadeInDown mt-3">
+<div class="loginColumns animated fadeInDown mt-3 px-5">
     <div class="row">
 
         <div class="col-md-6 mt-3">
