--- a/web/views/login/index.html
+++ b/web/views/login/index.html
@@ -38,19 +38,18 @@
     <div class="row">
 
         <div class="col-md-6 mt-3">
-
             <h3 langtag="info-tagline"></h3>
-
-            <li langtag="info-feature1"></li>
-            <li langtag="info-feature2"></li>
-            <li langtag="info-feature3"></li>
-            <li langtag="info-feature4"></li>
-            <li langtag="info-feature5"></li>
-            <li langtag="info-feature6"></li>
-            <li langtag="info-feature7"></li>
-            <li langtag="info-feature8"></li>
-            <li langtag="info-feature9"></li>
-
+            <ul class="px-1 text-justify">
+                <li langtag="info-feature1"></li>
+                <li langtag="info-feature2"></li>
+                <li langtag="info-feature3"></li>
+                <li langtag="info-feature4"></li>
+                <li langtag="info-feature5"></li>
+                <li langtag="info-feature6"></li>
+                <li langtag="info-feature7"></li>
+                <li langtag="info-feature8"></li>
+                <li langtag="info-feature9"></li>
+            </ul>
         </div>
 
         <div class="col-md-6 mt-3">
